fix: update to field images
