# hospital-service/docs/swagger.yaml
@@ -2,8 +2,6 @@ basePath: /
 definitions:
   doctor.Doctor:
     properties:
-      avatar_url:
-        type: string
       created_at:
         type: string
       doctor_id:
@@ -13,6 +11,8 @@ definitions:
       full_name:
         type: string
       hospital_id:
+        type: string
+      image:
         type: string
       phone:
         type: string
@@ -59,7 +59,7 @@ definitions:
         type: string
       hospital_id:
         type: string
-      logo_url:
+      image:
         type: string
       name:
         type: string
@@ -72,8 +72,6 @@ definitions:
     properties:
       address:
         type: string
-      avatar_url:
-        type: string
       created_at:
         type: string
       dob:
@@ -84,6 +82,8 @@ definitions:
         type: string
       gender:
         $ref: '#/definitions/enums.Gender'
+      image:
+        type: string
       patient_id:
         type: string
       phone:
